fix layout bug multiple choice radio buttons #228759359713085

--- a/src/TrueOrFalse.Frontend.Web/Views/Questions/Answer/AnswerQuestion.css
+++ b/src/TrueOrFalse.Frontend.Web/Views/Questions/Answer/AnswerQuestion.css
@@ -43,12 +43,10 @@
 }
 #AnswerInputSection textarea,
 #AnswerInputSection input {
-  margin-top: 10px;
   margin-bottom: 10px;
 }
 #AnswerInputSection label {
   position: relative;
-  top: 6px;
 }
 .answerFeedback {
   position: absolute;
